# cortex

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
app/: __init__.py  main.py  mcp_server.py
app/api/routes/: graph.py  memory.py  projects.py
app/core/: config.py  logging.py
app/models/: __init__.py  memory.py  project.py
app/services/: bootstrap_service.py  chat_service.py  cognee_service.py  context_service.py  extraction_service.py  memory_service.py  project_registry_service.py  retrieval_service.py
app/static/: index.html
app/templates/: base.html  chat.html  cognee.html  graph.html
docs/: api.md  architecture.md  mcp.md  mcp_execution_plan.md  overview.md  setup.md
tests/: conftest.py  test_bootstrap.py  test_chat.py  test_context.py  test_ingest.py  test_mcp.py  test_search.py  test_ui.py
